# postcli

./: .gitignore  README.md  pyproject.toml
postcli/: cli.py  contacts.py  links.py
postcli/examples/: README.md  contacts.csv  links.json  template.txt
